--- a/_news/2024-04-01.md
+++ b/_news/2024-04-01.md
@@ -1,12 +1,14 @@
 ---
 permalink: /news/2024-04-01
-title: "<span class='title-font'>Kaggle: HMS Harmful Brain Activity Classification</span>"
+title: "Kaggle: HMS Harmful Brain Activity Classification"
 author_profile: true
 ---
-<span class="time-font">
+
+<h2 class="title-font no-border" ><a href="#title" style="text-decoration: none; color: inherit;">Kaggle: HMS Harmful Brain Activity Classification</a></h2>
+<b class="time-font" style="display: block; margin-top: -20px; margin-bottom: -10px;">
 2024-04
-</span>
+</b>
 
 <span class="body-font">
-Our team was awarded a bronze medal in the [Kaggle Competition: Harvard Medical School Harmful Brain Activity Classification](https://www.kaggle.com/competitions/hms-harmful-brain-activity-classification). Many thanks to my team members, Wei Wang and Yunxiao for their dedicated efforts, as well as to our advisors, Hongzhi and Prof. Wei Jin, for their invaluable guidance!
+Our team was awarded a bronze medal in the [Kaggle Competition: Harvard Medical School Harmful Brain Activity Classification](https://www.kaggle.com/competitions/hms-harmful-brain-activity-classification){:target="_blank"}. Many thanks to my team members, Wei Wang and Yunxiao for their dedicated efforts, as well as to our advisors, Hongzhi and Prof. Wei Jin, for their invaluable guidance!
 </span>
