--- a/_news/2024-07-01.md
+++ b/_news/2024-07-01.md
@@ -1,12 +1,15 @@
 ---
 permalink: /news/2024-07-01
-title: "<span class='title-font'>EpiLearn</span>"
+title: "EpiLearn"
 author_profile: true
 ---
-<span class="time-font">
+
+
+<h2 class="title-font no-border" ><a href="#title" style="text-decoration: none; color: inherit;">EpiLearn: A Python library for machine learning in epidemic modeling</a></h2>
+<b class="time-font" style="display: block; margin-top: -20px; margin-bottom: -10px;">
 2024-07
-</span>
+</b>
 
 <span class="body-font">
-EpiLearn is a Python package that integrates various models in the field of epidemic modeling, with a focus on solving spatio-temporal problems. It includes foundational models like GCN, GAT, GraphSAGE, LSTM, and GRU, as well as more complex models such as EINN, EpiGNN, ATMGNN, and STGCN. Welcome to check out our [repository](https://github.com/Emory-Melody/EpiLearn), where you will find tutorials and instructions on how to install and use EpiLearn.
+EpiLearn is a Python package that integrates various models in the field of epidemic modeling, with a focus on solving spatio-temporal problems. It includes foundational models like GCN, GAT, GraphSAGE, LSTM, and GRU, as well as more complex models such as EINN, EpiGNN, ATMGNN, and STGCN. Welcome to check out our [repository](https://github.com/Emory-Melody/EpiLearn){:target="_blank"}, where you will find tutorials and instructions on how to install and use EpiLearn.
 </span>
